Fix resume padding on small screens

--- a/sass/_resume.scss
+++ b/sass/_resume.scss
@@ -3,10 +3,14 @@ html.resume {
 		font-family: 'Roboto Condensed', sans-serif;
 		background: #f5f5f5;
 		font-weight: 300;
-		padding: 36px 3%;
+		padding: 3%;
 		min-width: 360px;
 		//- always show scrollbar so no horizontal shifts when expanding
 		overflow-y: scroll;
+
+		@media (min-width: 1200px) {
+			padding: 36px 3%;
+		}
 	}
 
 	ul {
